--- a/tinker/templates/creative_tim_base.html
+++ b/tinker/templates/creative_tim_base.html
@@ -69,7 +69,7 @@
     <script src="https://cdn1.bethel.edu/tinker/js/paper-dashboard.js"></script>
 
     <!-- General Tinker JS file -->
-    <link href="/static/assets/js/tinker.js" type="text/javascript"/>
+   <script src="/static/assets/js/tinker.js" type="text/javascript"></script>
 
     {% block scripts %}{% endblock %}
 
