--- a/tinker/templates/e-announcements/home.html
+++ b/tinker/templates/e-announcements/home.html
@@ -49,7 +49,7 @@
                         <label for="e-annz-title">E-Announcement Title:</label>
                         <input id="e-annz-title" type="text" name="E-Annz-Title" class="input-field">
                         <label for="e-annz-date">E-Announcement Date</label>
-                        <input id="e-annz-date" class='datepicker input-field' size='11'>
+                        <input id="e-annz-date" class='datepicker input-field date-range' size='11'>
                     </div>
                 </div>
             </div>
