--- a/tinker/templates/events/home.html
+++ b/tinker/templates/events/home.html
@@ -84,10 +84,12 @@
                                 <div class="content">
                                     <label for="event-title">Event Title:</label>
                                     <input id="event-title" type="text" name="event-title" class="input-field"><br/>
-                                    <label for="start-date">Start Date:</label>
-                                    <input id="start-date" class='datepicker input-field' size='11'>
-                                    <label for="end-date">End Date:</label>
-                                    <input id="end-date" class='datepicker input-field' size='11'>
+                                    <label for="start-date">Date Range:<br />
+                                        <span>
+                                            <input id="start-date" class="datepicker input-field date-range" size="11"> -
+                                            <input id="end-date" class="datepicker input-field date-range" size="11">
+                                        </span>
+                                    </label>
                                 </div>
                             </div>
                         </div>
@@ -177,6 +179,10 @@
                     }
                 }
             };
+            if ($(this).attr('id') == 'start-date'){
+                starting_values['defaultDate'] = new Date();
+                starting_values['setDefaultDate'] = true;
+            }
             var picker = new Pikaday(starting_values);
         });
         function search_events() {
