Fixing and Testing
Fixed the searching based on author of event or e-annz, plus a couple of minor fixes for failed tests.

--- a/tinker/templates/e-announcements/home.html
+++ b/tinker/templates/e-announcements/home.html
@@ -41,7 +41,7 @@
                 {% endfor %}
             </select>
             <br>
-            <button id="search-filters" class="no-show btn btn-primary">+ Add Search Filters</button>
+            <button id="search-filters" class="no-show btn btn-primary">+ More Search Filters</button>
             <br>
             <div id="additional-search-params" style="display: none;">
                 <div class="card">
