--- a/tinker/templates/e-announcements/results.html
+++ b/tinker/templates/e-announcements/results.html
@@ -52,7 +52,7 @@
                 {{ form_card(form) }}
             {% endfor %}
         {% else %}
-            <p> It appears that there are no announcements in this category. </p>
+            <p> Search completed: No E-Announcements meet the search criteria. </p>
         {% endif %}
     </div>
 {% endblock %}
