--- a/tinker/templates/events/home.html
+++ b/tinker/templates/events/home.html
@@ -76,8 +76,8 @@
                             {% endfor %}
                         </select>
                         <br>
-                        <button id="search-filters" class="no-show btn btn-primary">+ Add Search Filters</button>
-                        <div id="additional-search-params" style="display: none;">
+                        <button id="search-filters" class="show btn btn-primary">- Less Search Filters</button>
+                        <div id="additional-search-params">
                             <div class="card">
                                 <div class="content">
                                     <label for="event-title">Event Title:</label>
