--- a/tinker/templates/events/search-results.html
+++ b/tinker/templates/events/search-results.html
@@ -42,7 +42,7 @@
                 {{ form_card(form) }}
             {% endfor %}
         {% else %}
-            <p> It appears that there are no events in this category. </p>
+            <p> Search completed: No Events meet the search criteria. </p>
         {% endif %}
     </div>
 {% endblock %}
