--- a/tinker/templates/e-announcements/home.html
+++ b/tinker/templates/e-announcements/home.html
@@ -19,12 +19,12 @@
 
             <hr>
 
-            <a href="{{ url_for('e_announcements.EAnnouncementsView:new') }}" class="btn btn-primary new-btn">
+            <a href="{{ url_for('EAnnouncementsView:new') }}" class="btn btn-primary new-btn">
                 Submit New E-Announcement</a>
 
             {% if 'E-Announcement Approver' in session['groups'].split(';')
                 or 'Administrators' in session['groups'].split(';') %}
-                <a href="{{ url_for('e_announcements.EAnnouncementsView:ea_upcoming') }}"
+                <a href="{{ url_for('EAnnouncementsView:ea_upcoming') }}"
                    class="btn btn-primary new-btn">Upcoming E-Announcements</a>
             {% endif %}
 
@@ -139,7 +139,7 @@
         {#   Search E-ANNZ   #}
 
         function search_e_annz() {
-            search_url = "{{ url_for('e_announcements.EAnnouncementsView:search') }}";
+            search_url = "{{ url_for('EAnnouncementsView:search') }}";
             $('#spinner').show();
             inputs = {
                 "title": $("#e-annz-title").val(),
