--- a/tinker/templates/faculty-bios/home.html
+++ b/tinker/templates/faculty-bios/home.html
@@ -83,7 +83,9 @@
             <div class="col-md-12">
                 {% if show_create %}
                     <a href="{{ url_for('FacultyBiosView:new') }}" class="btn btn-primary">Create New Bio</a>
-                    <a href="{{ url_for('FacultyBiosView:get_faculty_bio_csv') }}" class="btn btn-primary">Export csv file</a>
+                    {% if show_special_admin_view %}
+                     <a href="{{ url_for('FacultyBiosView:get_faculty_bio_csv') }}" class="btn btn-primary">Export csv file</a>
+                    {% endif %}
                     <hr/>
                 {% endif %}
                 {% if show_special_admin_view %}
