Better slash checking
Checks for more than 2 slashes and eliminates them throughout the whole string.

--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -164,9 +164,8 @@
                     input.val("/" + value); // add in a slash
                     value = input.val();
                 }
-                if (value[0] == '/' && value[1] =='/'){
-                    input.val(input.val().replace('//','/')); // eliminates a lead double slash
-                }
+                input.val(input.val().replace(/\/\//g,'/')); // eliminates double slashes
+
                 delay(function () {
                     loadTableForSearch(value, $('#new-redirect-to').val());
                     $('#spinner').hide();
@@ -174,7 +173,6 @@
             });
 
             $('#modal-from-path-edit').keyup(function(){
-                var validRedirect = /(\/)[^\/\s][^\s]*/;
                 var input = $(this);
                 input.val(input.val().replace(/ /g, '')); // eliminates spaces
                 var value = input.val();
@@ -183,9 +181,7 @@
                     input.val("/" + value); // add in a slash
                     value = input.val();
                 }
-                if (value[0] == '/' && value[1] =='/'){
-                    input.val(input.val().replace('//','/')); // eliminates a lead double slash
-                }
+                input.val(input.val().replace(/\/\//g,'/')); // eliminates double slashes
             });
 
             $('#modal-to-url-edit').keyup(function(){
