--- a/tinker/templates/admin/redirects/clear-redirects.html
+++ b/tinker/templates/admin/redirects/clear-redirects.html
@@ -3,7 +3,7 @@
     There are no changes or deletions to worry about. Good work!<br>
 {% else %}
     {% if changed|length > 0 %}
-       These are the redirects being changed<br>
+       These are the redirects being changed. You won't need to do anything with these, they already were updated and we are just informing you. If you notice anything weird, contact Web Development.<br>
        To Url --> Response<br/>
         {% for changed_dict in changed %}
             {{ changed_dict['to_url'] }} --> {{ changed_dict['response'] }}<br>
@@ -11,7 +11,8 @@
     {% endif %}
 
     {% if deleted|length > 0 %}
-        These are the redirects that can be deleted<br>
+        <br>
+        These are the redirects that can be deleted. Tinker noticed that these redirects are broken. If the url on the left does not start with "/", then it can only be deleted by Web Development. The rest you can delete or update as needed.<br>
         From Path --> To Url<br/>
         {% for deleted_dict in deleted %}
             {{ deleted_dict['from_path'] }} --> {{ deleted_dict['to_url'] }}<br>
