--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -593,6 +593,11 @@ label.checkbox {
     font-size: 85%;
 }
 
+.courseleaf-status {
+    font-family: Muli, Helvetica Neue, sans-serif!important;
+    font-size: 85%;
+}
+
 /* Makes element have display of none */
 .display-none {
     display: none;
